<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffff">

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#05050a"
            android:layout_height="wrap_content"
            android:text="@string/onlineintro"
            android:textAlignment="center"
            android:textSize="18dp"
            android:paddingLeft="@dimen/listview_margin"
            android:paddingRight="@dimen/listview_margin"
            android:id="@+id/onlineintro"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/onlinetitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textColor="#0e0ed6"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="PowerSchool" />

            <TextView
                android:id="@+id/onlineinfo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#0d0909"
                android:textSize="15dp"
                android:text="@string/powerschool" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/onlinetitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textColor="#0e0ed6"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="Haiku / PowerSchool Learning" />

            <TextView
                android:id="@+id/onlineinfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#0d0909"
                android:textSize="15dp"
                android:text="@string/haiku" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/onlinetitle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textColor="#0e0ed6"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="School Directory" />

            <TextView
                android:id="@+id/onlineinfo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#0d0909"
                android:textSize="15dp"
                android:text="@string/directory" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/onlinetitle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:textColor="#0e0ed6"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="ASP Libraries" />

            <TextView
                android:id="@+id/onlineinfo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#0d0909"
                android:textSize="15dp"
                android:text="@string/libraries" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>