<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:clickable="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#003D71"
            android:text="ASP Welcome Program:"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:maxLines="2"
                    android:textColor="#003D71"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:text="Orientation Day" />

                <TextView
                    android:id="@+id/date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#003D71"
                    android:textSize="15dp"
                    android:textStyle="italic"
                    android:text="August 26 | 9:00am – 1:00pm" />

                <TextView
                    android:id="@+id/info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#003D71"
                    android:textSize="15dp"
                    android:text="@string/welcomeO" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/orientation"
                android:id="@+id/img1"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:maxLines="2"
                    android:textColor="#003D71"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:text="Back-to-School BBQ" />

                <TextView
                    android:id="@+id/date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#003D71"
                    android:textSize="15dp"
                    android:textStyle="italic"
                    android:text="September 14 | 11:30am – 2:30pm" />

                <TextView
                    android:id="@+id/info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#003D71"
                    android:textSize="15dp"
                    android:text="@string/welcomeBTSP" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/btsp"
                android:id="@+id/img2"
                android:layout_weight="0.3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:maxLines="2"
                    android:textColor="#003D71"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:text="Living Skills Seminars" />

                <TextView
                    android:id="@+id/date3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#003D71"
                    android:textSize="15dp"
                    android:textStyle="italic"
                    android:text="September 18 | 8:45am – 3:30pm\nSeptember 19 | 8:45am – 12:00pm" />

                <TextView
                    android:id="@+id/info3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="#003D71"
                    android:textSize="15dp"
                    android:text="@string/welcomeLSS" />

            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/lss"
                android:id="@+id/img3"
                android:layout_weight="0.3"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
